add new field in credential model
